fixing cards images on small devises

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -119,12 +119,14 @@ body{
 
 
 			.card .image.custom{
+				margin: 0px !important;
 				width: 290px !important;
 				height: 210px !important;
 			}
 
 
 			.card .image.custom .artist_profile_pic{
+				margin: 0px !important;
 				width: 290px !important;
 				height: 210px !important;
 			}
